loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:3: error: identifier expected but integer literal found.
for (i : 0 <- 40)
         ^LoopCourse:11: error: '<-' expected but '}' found.
	}
        ^