loopfor.LoopCourse.scala.code


for (i : 0 <- 40)
{
  for (j : 0 <- 7 )
  {forward ();}
  left();
    
}